# eecs106a-final-project

./: .gitignore  README.md  facemesh.py  facemesh_preview.py  frames_2025-12-12_01.57.05.gv
docs/: MEDIA_GUIDE.md  README.md  index.html
src/head_teleop/: package.xml  setup.cfg  setup.py
src/head_teleop/head_teleop/: facemesh_preview.py  facemesh_ur7e_control_node.py  head_pose_blink_node.py  head_teleop_mapper_node.py
src/head_teleop/head_teleop/planning/: __init__.py  ik.py
src/head_teleop/launch/: facemesh_ur7e_control_launch.py  head_teleop_launch.py
src/head_teleop/test/: test_copyright.py  test_flake8.py  test_pep257.py
